--- a/NuGetGems/NuGetGems.csproj
+++ b/NuGetGems/NuGetGems.csproj
@@ -19,12 +19,15 @@
     <PackageReference Include="Ardalis.GuardClauses" Version="4.0.1" />
     <PackageReference Include="Ben.Demystifier" Version="0.4.1" />
     <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
+    <PackageReference Include="Betalgo.OpenAI.GPT3" Version="6.8.3" />
     <PackageReference Include="Flurl" Version="3.0.7" />
     <PackageReference Include="Flurl.Http" Version="3.2.4" />
+    <PackageReference Include="Forge.OpenAI" Version="1.0.3" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0-preview.7.22376.6" />
     <PackageReference Include="NodaTime" Version="3.1.8" />
     <PackageReference Include="OneOf" Version="3.0.243" />
+    <PackageReference Include="OpenAI" Version="1.7.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="ZiggyCreatures.FusionCache" Version="0.19.0" />
   </ItemGroup>
